<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/TextView01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/seekbar01" />
    <SeekBar
        android:id="@+id/SeekBar01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />
    <TextView
        android:id="@+id/TextView02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/seekbar02" />
    <SeekBar
        android:id="@+id/SeekBar02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />
    <TextView
        android:id="@+id/TextView03"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/seekbar03" />
    <SeekBar
        android:id="@+id/SeekBar03"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />
    <TextView
        android:id="@+id/TextView04"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/seekbar04" />
    <SeekBar
        android:id="@+id/SeekBar04"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />
    <TextView
        android:id="@+id/TextView05"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/seekbar05" />
    <SeekBar
        android:id="@+id/SeekBar05"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />
    <TextView
        android:id="@+id/TextView06"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/seekbar06" />
    <SeekBar
        android:id="@+id/SeekBar06"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button01" />
        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button02" />
    </LinearLayout>
</LinearLayout><!-- Copyright (c) 2012-2016 YA <ya.androidapp@gmail.com> All rights reserved. -->